# cmake-google-test

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: example.h
src/: example.cc
test/: CMakeLists.txt  example_unit_test.cpp  main_test.cpp
